noctis_pro.log

Watching for file changes with StatReloader
"GET /worklist/ui/ HTTP/1.1" 302 0
"GET /worklist/ui/ HTTP/1.1" 302 0
"GET /worklist/ui/ HTTP/1.1" 302 0
"GET / HTTP/1.1" 302 0
Watching for file changes with StatReloader
Watching for file changes with StatReloader
"GET /login/ HTTP/1.1" 200 17591
Forbidden (CSRF cookie not set.): /login/
"POST /login/ HTTP/1.1" 403 2855
"GET /login/ HTTP/1.1" 200 17591
"POST /login/ HTTP/1.1" 302 0
Forbidden (CSRF token missing.): /worklist/
"POST /worklist/ HTTP/1.1" 403 2491
Internal Server Error: /worklist/studies/
Traceback (most recent call last):
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/core/handlers/exception.py", line 55, in inner
    response = get_response(request)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/core/handlers/base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/contrib/auth/decorators.py", line 59, in _view_wrapper
    return view_func(request, *args, **kwargs)
  File "/workspace/worklist/views.py", line 110, in study_list
    return render(request, 'worklist/study_list.html', context)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/backends/django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/loaders/cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/loaders/base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 518, in parse
    raise self.error(token, e)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/loader_tags.py", line 299, in do_extends
    nodelist = parser.parse()
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 518, in parse
    raise self.error(token, e)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/loader_tags.py", line 234, in do_block
    nodelist = parser.parse(("endblock",))
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 518, in parse
    raise self.error(token, e)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/defaulttags.py", line 862, in do_for
    nodelist_loop = parser.parse(
        (
    ...<2 lines>...
        )
    )
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 518, in parse
    raise self.error(token, e)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/defaulttags.py", line 861, in do_for
    sequence = parser.compile_filter(bits[in_index + 1])
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 609, in compile_filter
    return FilterExpression(token, self)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 705, in __init__
    filter_func = parser.find_filter(filter_name)
  File "/home/ubuntu/.local/lib/python3.13/site-packages/django/template/base.py", line 615, in find_filter
    raise TemplateSyntaxError("Invalid filter: '%s'" % filter_name)
django.template.exceptions.TemplateSyntaxError: Invalid filter: 'get_item'
Not Found: /viewer/api/series/1/mpr/
/workspace/dicom_viewer/views.py changed, reloading.
Watching for file changes with StatReloader
/workspace/dicom_viewer/views.py changed, reloading.
Watching for file changes with StatReloader
/workspace/dicom_viewer/views.py changed, reloading.
Watching for file changes with StatReloader
/workspace/dicom_viewer/views.py changed, reloading.
Watching for file changes with StatReloader
/workspace/dicom_viewer/views.py changed, reloading.
Watching for file changes with StatReloader
Method Not Allowed (GET): /dicom-viewer/measurements/save/
Method Not Allowed (GET): /dicom-viewer/annotations/save/
